# starter-snake-rust

./: .gitignore  .replit  CHANGELOG.md  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  app.json  replit.nix
.github/workflows/: cd.yml  release-production.yml  release-staging.yml
src/: bugged board  logic.rs  main.rs
