[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "boa"
version = "1.0.0"
edition = "2021"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"
par-map = "0.1.4"
